# splatcoder

./: .gitignore  README.md  pyproject.toml  sample_template.cpp  sample_template.py  setup.py
splatcoder/: check.py  checker.py  config.py  generator.py  main.py  scraper.py
